--- a/public_html/index.html
+++ b/public_html/index.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <title>Borusia Georgia</title>
-        <link rel="stylesheet" type="text/css" media="all" href="css/style.min.css" />
         <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+        <link rel="stylesheet" type="text/css" media="all" href="css/style.min.css" />
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="bower_components/jquery/dist/jquery.js"><\/script>');</script>
         <script src="js/main.min.js"></script>
     </head>
